--- a/EnjoyFood/app/src/main/AndroidManifest.xml
+++ b/EnjoyFood/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EnjoyFood">
         <activity
+            android:name=".setting.SettingActivity"
+            android:exported="true" />
+        <activity
             android:name=".board.BoardEditActivity"
             android:exported="true" />
         <activity
