--- a/EnjoyFood/app/build.gradle
+++ b/EnjoyFood/app/build.gradle
@@ -30,14 +30,17 @@ android {
         jvmTarget = '1.8'
     }
     dataBinding {
-        enabled true
+        enabled = true
+    }
+    viewBinding {
+        enabled = true
     }
 }
 
 apply plugin: 'com.google.gms.google-services'
 
 dependencies {
-
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
